# CCBot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  ai-config.json.example  ai_prompt  ai_prompt.md  build.rs  data.json.example  docker-compose.yaml  readme.md  record.md  sys.prompt  奶盖波波糖.md
.github/workflows/: main.yml
docs/: 项目结构.txt
src/: cmd_system.rs  config.rs  hub_system.rs  keys.rs  lib.rs  macros.rs  main.rs  model.rs  music_system.rs  shared.rs  utils.rs  yt_dlp.rs
src/bot/: mod.rs
src/bot/handlers/: ai.rs  clear.rs  manager.rs  mod.rs  start.rs
src/cmd_system/: general.rs  help.md  help.rs  manage.rs  mod.rs  music.rs  utils.rs
src/commands/: help.md  help.rs  mod.rs  utils.rs
src/commands/general/: clear.rs  help.md  help.rs  mod.rs  ping.rs  register.rs  status.rs  version.rs
src/commands/manage/: mod.rs  prompt.rs  send_message.rs  withdraw.rs
src/commands/music/: join.rs  leave.rs  mod.rs  music_continue.rs  pause.rs  play.rs  stop.rs  utils.rs  volume.rs
src/config/: ai_config.rs  data_config.rs  mod.rs
src/db/: mod.rs
src/hub_system/: ai.rs  guild_message.rs  manager.rs  mod.rs  model.rs  start.rs
