[package]
name = "cc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
poise = "0.6.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "http", "model", "utils", "voice", "chrono", "cache"] }
songbird = "0.5.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "fmt"] }

#[dependencies.symphonia]
#version = "0.5"
#features = ["all-codecs", "all-formats"] # ...as well as any extras you need!

[features]
ai-chat = []
