[package]
name = "cc-bot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ChengCY-2254/CCBot.git"
[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "http", "model", "utils", "voice", "chrono", "cache"] }
#songbird = "0.5.0"
songbird = { git = "https://github.com/ChengCY-2254/songbird" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
sea-orm = "1.1.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "fmt"] }
# macro使用
lazy_static = "1.5.0"
paste = "1.0.15"
#proc-macro-workshop = { git = "https://github.com/ChengCY-2254/proc-macro-workshop.git" }

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[features]
