[package]
name = "cc-bot"
version = "0.1.0"
edition = "2024"
authors = ["Cheng"]
repository = "https://github.com/ChengCY-2254/CCBot.git"
[dependencies]

# 错误处理
anyhow = "1.0.98"
# 时间管理
chrono = "0.4.41"
# .env文件加载
dotenv = "0.15.0"
# 异步使用
futures = "0.3.31"
# 异步运行
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
# 日志库门面
log = "0.4.27"
# 日志
tracing = "0.1.41"
# 日志订阅
tracing-subscriber = { version = "0.3.19", features = ["local-time", "fmt"] }
# 请求发送
reqwest = { version = "0.12.15", features = ["json"] }
# 序列化框架
serde = "1.0.219"
serde_json = "1.0.140"
# 机器人命令框架
poise = "0.6.1"
# 机器人主服务框架
serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "http", "model", "utils", "voice", "chrono", "cache"] }
#songbird = "0.5.0"
# 音频播放框架
songbird = { git = "https://github.com/ChengCY-2254/songbird" }

# macro使用
lazy_static = "1.5.0"
paste = "1.0.15"

# 编解码器，不可移除
[dependencies.symphonia]
version = "0.5"
features = ["all"]